# ipymediator

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: poetry-test.yml
examples/: ipydialog_example.ipynb  ipymediator_examples.ipynb
ipydialog-filedialog/: pyproject.toml
ipydialog-utils/src/ipydialog/: enumerations.py  typing.py
ipydialogs/: dialogs.py
ipydialogs/enumerations/: custom_enums.py  custom_types.py
ipydialogs/interface/: __init__.py  metaclass.py
ipydialogs/utils/: __init__.py  common_functions.py
ipymediator/: __init__.py  __version__.py  dialogs.py
ipymediator/dialogs/: __init__.py  custom_dialogs.py
ipymediator/enumerations/: __init__.py  custom_enums.py  custom_types.py
ipymediator/exceptions/: __init__.py
ipymediator/interface/: __init__.py  component.py  mediator.py  metaclass.py
ipymediator/utils/: __init__.py  common_functions.py
src/dialog/: __init__.py  filedialog.py
src/enumerations/: __init__.py  custom_types.py
src/interface/: __init__.py  component.py  mediator.py  metaclass.py
src/ipydialog/: __init__.py  filedialog.py
src/utils/: __init__.py  common_functions.py
tests/: test_common_functions.py  test_custom_dialogs.py  test_interface.py
