[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]

[tool.pytest.ini_options]

[project]
name = "ipydialog"
version = "0.0.1"
authors = [{name = "Andrew Ridyard", email = "ridyard12@gmail.com"}]
description = "Dialogs using ipywidgets"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python 3",
    "License :: OSI Approved :: GNU General Public License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/AndyRids/ipydialog"
Issues = "https://github.com/AndyRids/ipydialog/issues"