[tool.poetry]
name = "ipymediator"
version = "0.1.10a1"
description = "Dialogs Using ipywidgets & ipyleaflet"
authors = ["Andrew Ridyard <ridyard12@gmail.com>"]
keywords = ["ipywidgets", "mediator", "dialogs"]
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.9"
jedi = "~0.16"
traitlets = "*"
ipywidgets = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.6"
flake8 = "^7.0.0"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
