[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ipydialog-filedialog"
version = "0.0.1"
description = "File dialog widget"
readme = "README.md"
license = {text = "GPL-3.0 license"}
requires-python = ">=3.9"
authors = [
  { name = "Andrew Ridyard", email = "ridyard12@gmail.com" },
]
dependencies = [""]

[project.urls]
Homepage      = "https://github.com/AndyRids/ipydialog"
"Source Code" = "https://github.com/AndyRids/ipydialog"

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]
namespaces = true

